added tmux config to playbook

--- a/provision/roles/base/files/.tmux.conf
+++ b/provision/roles/base/files/.tmux.conf
@@ -1,8 +1,8 @@
 set -g default-terminal "screen-256color"
 
-set -g prefix C-a
+set -g prefix C-q
 unbind C-b
-bind-key C-a send-prefix
+bind-key C-q send-prefix
 
 unbind %
 bind | split-window -h
