fixed typo on nvim copy directory

--- a/provision/roles/base/tasks/main.yml
+++ b/provision/roles/base/tasks/main.yml
@@ -95,7 +95,7 @@
   when: nvim_exists is failed
   copy:
     src: ../files/nvim/
-    dest: "{{ home_path }}.cofig/nvim"
+    dest: "{{ home_path }}.config/nvim"
 
 - name: clone packer repo
   when: nvim_exists is failed
